fix|obsidian left alignment for tasks

--- a/notes/notes-kg/.obsidian/snippets/kg.css
+++ b/notes/notes-kg/.obsidian/snippets/kg.css
@@ -29,11 +29,16 @@ body {
 .cm-header.cm-header-4.cm-hmd-internal-link {
   color: var(--h4-color);
 }
+
 /* add top/bottom spacing to code snippets */
 .cm-s-obsidian span.cm-inline-code {
   padding: .25rem 0;
 }
 
+/* inline code snippets should be the same size */
+.cm-s-obsidian .cm-templater-command {
+  font-size: 1em;
+}
 
 /*********************************
        DataView plugin
@@ -48,17 +53,26 @@ body {
         TASKS plugin
  *********************************/
 
-/* left align task lists */
-.tasks-count {
-  padding-left: 0;
-  font-weight: bold;
-}
+/* left padding on general tasks */
+body { --list-edit-offset: 0em; }
+
+/* reduce padding for tasks inside query + checkbox */
 .markdown-rendered ul, .markdown-rendered ol {
-   padding-inline-start: 0 !important;
+  padding-inline-start: 0.5rem;
+}
+/* alignt the input checkbox insider query resultss*/
+.markdown-source-view.mod-cm6 .contains-task-list.plugin-tasks-query-result .task-list-item-checkbox,
+.contains-task-list.plugin-tasks-query-result ul > li.task-list-item .task-list-item-checkbox {
+  right: 0.5rem;
+}
+
+.tasks-count {
+  font-weight: bold;
+  padding-inline-start: 0;
 }
 .markdown-source-view.mod-cm6 .task-list-item-checkbox,
 ul > li.task-list-item .task-list-item-checkbox {
-  margin-inline-start: calc(var(--checkbox-size) * -1.5);
+  /*margin-inline-start: calc(var(--checkbox-size) * -1.5);*/
 }
 
 /* format the backlink in a task */
